@@ -4,6 +4,8 @@ web.website.url = http://nwaldispuehl.github.io/interval-music-compositor/
 web.download.url = https://github.com/nwaldispuehl/interval-music-compositor/releases/latest
 web.userAgent.update = Interval Music Compositor [Update Checker]
 
+mail.support.address = interval-music-compositor@retorte.ch
+
 imc.outfile.sound.infix = imc_out
 imc.outfile.playlist.suffix = playlist.txt
 imc.temporaryFile.suffix = .imc_wav
