@@ -2,6 +2,10 @@
 web.website.help.url = https://nwaldispuehl.github.io/interval-music-compositor/feedback_support
 web.website.about.url = https://nwaldispuehl.github.io/interval-music-compositor/et_cetera
 
+error.feedback.mail.template = mailto:{0}?subject={1}&body={2}
+error.feedback.mail.subject = [IntervalMusicCompositor] Fehlermeldung
+error.feedback.mail.body.prefix = Hallo,\n\rbeim IntervalMusicCompositor ist ein Fehler aufgetreten, kannst du ihn anschauen?\n\r\n\rGrüsse: ...\n\r\n\rDebug Log:\n\r<Bitte füge hier soviele Daten wie möglich vom Debug-Log ein>\n\r
+
 # Error stuff
 ui.error.general.introduction = Folgender Fehler trat auf.\n\r
 ui.error.memory.introduction = Das Programm benötigt für einen Vorgang mehr Hauptspeicher (RAM) als es zugewiesen erhielt.\n\r
