@@ -2,6 +2,10 @@
 web.website.help.url = https://nwaldispuehl.github.io/interval-music-compositor/en/feedback_support
 web.website.about.url = https://nwaldispuehl.github.io/interval-music-compositor/en/et_cetera
 
+error.feedback.mail.template = mailto:{0}?subject={1}&body={2}
+error.feedback.mail.subject = [IntervalMusicCompositor] Error report
+error.feedback.mail.body.prefix = Hi,\n\rwhile using the IntervalMusicCompositor an error showed up. Could you have a look?\n\r\n\rKind regards: ...\n\r\n\rDebug log:\n\r<Please add as much data as possible from debug log here>\n\r
+
 # Error stuff
 ui.error.general.introduction = There was a problem!\n\r
 ui.error.memory.introduction = The program gets not enough memory (RAM) to process your request!\n\r
