@@ -5,6 +5,7 @@ ui.instructions = Ziehe Musikdateien (der unterstützten Formate MP3, OGG, FLAC,
 # Error stuff
 ui.error.title = Interval Music Compositor - Fehler
 ui.error.appendix = (Bitte hilf mir, den Fehler zu korrigieren! Sende dazu den kompletten Text in "Hilfe" -> "Ereignisanzeige" an meine Adresse. Du findest sie unter "Hilfe" -> "Hilfe anfordern".)
+ui.error.sendback.button = Öffne Debug Log und Mailprogramm...
 
 # Update box
 ui.update.title = Updateprüfung
