@@ -4,6 +4,7 @@ ui.instructions = Drag and drop music files (supported formats: MP3, OGG, FLAC, 
 # Error stuff
 ui.error.title = IntervalMusicCompositor - Error
 ui.error.appendix = (Please help me to fix this error. For this, send the complete text found under "Help" -> "Debug log" to my mail address. You can find it under "Help" -> "Find help".)
+ui.error.sendback.button = Open debug log and mail software...
 
 # Update box
 ui.update.title = Update check
