@@ -4,6 +4,7 @@ retorte laboratories (retorte.ch) IntervalMusicCompositor change log
 2021-xx-xx  2.10.1 [not yet released]
 --------------------------------------------------------------------------------
 ADD  #28    Streamlines upgrade process by adding one-click-updater.
+ADD  #49    Adds mailto button to error dialog.
 IMP         Upgrades the bundled runtime to Java 17.
 FIX         'Too long' indicator in list overrides all other states, even errors.
 FIX  #62    Tracks in the current directory are not anymore added automatically.
